--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
   <!--main-->
   <footer>
-    <a href="index.html">ePortfolio</a>
+    <a href="https://chuff11.github.io/ePortfolio/">ePortfolio</a>
   </footer>
 </body>
 
